# ShiftTask

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
src/: config.py  crud.py  database.py  main.py  models.py  schemas.py
src/tests/: tests.py
